Some fixes for Online Image Browswer.

--- a/kstars/tools/onlineimagebrowser.ui
+++ b/kstars/tools/onlineimagebrowser.ui
@@ -85,6 +85,9 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
      <widget class="QListWidget" name="imageListWidget">
       <property name="viewMode">
        <enum>QListView::IconMode</enum>
